<resources>
    <string name="app_name">BUD</string>
    <string name="app_logo">app_logo</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="do_not_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="customer">Customer</string>
    <string name="nursery">Nursery</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="submit_sign_up">Submit Sign Up</string>
    <string name="illustration">Illustration</string>
    <string name="check_icon">Check icon</string>
    <string name="sign_up_successful">Sign Up Successful</string>
    <string name="customer_name">Customer Name</string>
    <string name="manager_name">Manager Name</string>
    <string name="edit_icon">Edit icon</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="arrow">Arrow</string>
    <string name="payment_icon">Payment icon</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="nursery_icon">Nursery icon</string>
    <string name="find_nursery">Find Nursery</string>
    <string name="history_icon">History icon</string>
    <string name="order_history">Order History</string>
    <string name="logout_icon">Logout icon</string>
    <string name="log_out">Log Out</string>
    <string name="search_plants_icon">SearchPlants icon</string>
    <string name="search_plants">Search Plants</string>
    <string name="plant_illustration">Plant Illustration</string>
    <string name="bank_account">Bank Account</string>
    <string name="update_storage">Update Storage</string>
    <string name="deliveries">Deliveries</string>
    <string name="toggle_password_visibility">Toggle Password Visibility</string>
    <string name="save_changes">Save Changes</string>
    <string name="nursery_name">Nursery Name</string>
    <string name="about">About</string>
    <string name="address">Address</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up_customer">Sign Up Customer</string>
    <string name="sign_up_nursery">Sign Up Nursery</string>
    <string name="houseplants">Houseplants</string>
    <string name="outdoor_plants">Outdoor Plants</string>
    <string name="summer_plants">Summer Plants</string>
    <string name="winter_plant">Winter Plant</string>
    <string name="spices_plants">Spices plants</string>
    <string name="my_card">My Card</string>
    <string name="friend_card">Friend Card</string>
    <string name="default_card">DEFAULT</string>
    <string name="add_a_payment_method">Add a Payment Method</string>
    <string name="add_card">Add Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="id_number">ID Number</string>
    <string name="save_card">Save Card</string>
    <string name="bank">Bank</string>
    <string name="account_number">Account Number</string>
    <string name="peterson_nursery">Peterson Nursery</string>
    <string name="leaf_amp_bloom"><![CDATA[Leaf&Bloom]]></string>
    <string name="sprout_amp_about"><![CDATA[Sprout&About]]></string>
    <string name="elmwood_gardens">Elmwood Gardens</string>
    <string name="penutree_gardens">Penutree Gardens</string>
    <string name="total">Total</string>
    <string name="status">Status</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="verification_code">Verification code</string>
    <string name="verifyPhone">Verify Phone</string>
    <string name="phone">Phone</string>
    <string name="send_code">Send Code</string>
    <string name="_972">+972</string>
    <string name="your_plants">Your Plants</string>
    <string name="list_of_plants">List of plants</string>
    <string name="plant_image">plant image</string>
    <string name="quantity">quantity</string>
    <string name="price">price</string>
    <string name="save">save</string>
    <string name="name">Name</string>
    <string name="delete">delete</string>
    <string name="_0_00">₪ 0.00</string>
    <string name="plant_name">Plant Name</string>
    <string name="list_of_nurseries">list of nurseries</string>
    <string name="minus">−</string>
    <string name="enter_plant_name">Enter plant name</string>
    <string name="category">Category</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="enter_price">Enter price</string>
    <string name="description_of_the_plant">Description of the plant</string>
    <string name="checkout">checkout</string>
    <string name="total_0_00">Total: ₪0.00</string>
    <string name="continue_shopping">continue shopping</string>
    <string name="payment">payment</string>
    <string name="my_orders">My Orders</string>
    <string name="filter">Filter</string>
    <string name="list_of_all_plants">list_of_all_plants</string>
    <string name="add_new_plant">Add_New_Plant</string>
    <string name="plants_in_nursery">Plants in Nursery</string>
    <string name="max_price">Max Price</string>
    <string name="list_of_plants_in_cart">list_of_plants_in_cart</string>
    <string name="back_to_home">Back to Home</string>
    <string name="payment_successful">Payment Successful!</string>
    <string name="read_more">Read More</string>
    <string name="long_desription">Long_Desription</string>
    <string name="phone_050_0000000">Phone: 050-0000000</string>
    <string name="customer_example">Customer: Example</string>
    <string name="date">Date</string>
    <string name="save_status">Save Status</string>
    <string name="per_unit">Per Unit:</string>
    <string name="edit">Edit</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="add">ADD</string>
    <string name="verify_email">Verify Email</string>
    <string name="remove">מחק</string>
    <string name="decrease_quantity">הקטן כמות</string>
    <string name="increase_quantity">הגדל כמות</string>
</resources>