<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#F5FCD9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/plantImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/plant_image"
            android:src="@drawable/add_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#2C6E49" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_plant_name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColorHint="#757575" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="#2C6E49" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="#2C6E49" />

        <EditText
            android:id="@+id/editTextQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_quantity"
            android:inputType="number"
            android:padding="12dp"
            android:textColorHint="#757575" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="#2C6E49" />

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_price"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:textColorHint="#757575" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="#2C6E49" />

        <EditText
            android:id="@+id/editTextAbout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="24dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:gravity="top"
            android:hint="@string/description_of_the_plant"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="false"
            android:backgroundTint="#2C6E49"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</ScrollView>
