<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@drawable/rounded_card_bg">

    <TextView
        android:id="@+id/textPlantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_name"
        android:textSize="18sp"
        android:textColor="#2C6E49"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/textQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textColor="#333333" />

        <TextView
            android:id="@+id/textUnitPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/per_unit"
            android:textAlignment="center"
            android:textColor="#333333" />

        <TextView
            android:id="@+id/textTotalPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textAlignment="viewEnd"
            android:textColor="#333333" />
    </LinearLayout>

</LinearLayout>
