<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FCD9"
    android:padding="32dp">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/title_signup_manager_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_nursery"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#2C6E49"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/Nursery_name_Input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/nursery_name"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp"
        android:textColor="#2C6E49"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@id/title_signup_manager_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/about_nursery_input_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/about"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp"
        android:textColor="#2C6E49"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@id/Nursery_name_Input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp"
        android:textColor="#2C6E49"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@id/about_nursery_input_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp"
        android:textColor="#2C6E49"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <LinearLayout
        android:id="@+id/phoneLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/phonePrefixInput"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:autofillHints="+972"
            android:hint="@string/_972"
            android:inputType="phone"
            android:maxLength="5"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:textColor="#2C6E49"
            android:textColorHint="#757575"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/phoneNumberInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/phone"
            android:inputType="phone"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:textColor="#2C6E49"
            android:textColorHint="#757575" />
    </LinearLayout>


    <EditText
        android:id="@+id/address_input_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_bg"
        android:padding="12dp"
        android:textColor="#2C6E49"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@id/phoneLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:backgroundTint="#2C6E49"
        android:textColor="@android:color/white"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/address_input_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/goToLoginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="#2C6E49"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
