<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FCD9">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/successIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_fileName="payment_success.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:contentDescription="@string/check_icon" />


    <TextView
        android:id="@+id/successText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_successful"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#2C6E49"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/successIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/signInButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:backgroundTint="#2C6E49"
        android:textColor="@android:color/white"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/successText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/illustration"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/illustration"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/signInButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
